# novatok-staking

./: .gitignore  Anchor.toml  BUILD.md  CHANGELOG.md  Cargo.toml  DEPLOYMENT.md  FINAL_SUMMARY.md  README.md  SECURITY.md  SMOKE_TEST.md  package.json  rust-toolchain.toml  tsconfig.json
.emergent/: emergent.yml
programs/nova_staking/: Cargo.toml
programs/nova_staking/src/: constants.rs  error.rs  lib.rs  tier.rs
programs/nova_staking/src/instructions/: admin.rs  claim_rewards.rs  fund_treasury.rs  initialize.rs  mod.rs  stake.rs  unstake.rs
programs/nova_staking/src/state/: admin_control.rs  mod.rs  stake_pool.rs  user_stake.rs
public/: robots.txt  sitemap.xml
scripts/: setup-dev.sh  stake-status.ts
tests/: nova-staking.ts  utils.ts
