[workspace]
members = [
    "programs/nova_staking"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
opt-level = 3

# Patches for Solana SBF compatibility (rustc 1.75.0-dev)
# =======================================================
# Solana 1.18.x SBF toolchain uses rustc 1.75.0-dev which enforces strict MSRV.
# Newer crate versions exceed this MSRV and must be pinned.
#
# Fixed issues:
#   1. toml_parser v1.0.6 requires rustc >= 1.76
#      Chain: borsh-derive -> proc-macro-crate v3.4.0 -> toml_edit v0.23 -> toml_parser
#      Fix: Pin proc-macro-crate to v3.2.0 (uses toml_edit v0.22, MSRV 1.65)
#
#   2. borsh-derive v1.6.0 requires rustc >= 1.77
#      Fix: Pin borsh and borsh-derive to v1.5.5 (MSRV 1.72)
#
[patch.crates-io]
proc-macro-crate = { git = "https://github.com/bkchr/proc-macro-crate", tag = "v3.2.0" }
borsh = { git = "https://github.com/near/borsh-rs", tag = "borsh-v1.5.5" }
