[workspace]
members = [
    "programs/nova_staking"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
opt-level = 3

# Patches for Solana SBF compatibility (rustc 1.75.0-dev)
# =======================================================
# Solana 1.18.x SBF toolchain uses rustc 1.75.0-dev which enforces strict MSRV.
# Newer crate versions exceed this MSRV and must be pinned.
#
# Fixed issues:
#   1. toml_parser v1.0.6 requires rustc >= 1.76
#      Chain: borsh-derive -> proc-macro-crate v3.4.0 -> toml_edit v0.23 -> toml_parser
#      Fix: Pin proc-macro-crate to v3.2.0 (uses toml_edit v0.22, MSRV 1.65)
#
#   2. borsh-derive v1.6.0 requires rustc >= 1.77
#      Fix: Pin borsh to v1.5.5 via git tag (MSRV 1.72)
#
#   3. constant_time_eq v0.4.2 requires rustc >= 1.85 (edition 2024)
#      Chain: solana-program -> blake3 v1.8.3 -> constant_time_eq v0.4.2
#      Fix: Pin blake3 to v1.5.5 (uses constant_time_eq ^0.3.1, MSRV 1.66)
#
[patch.crates-io]
proc-macro-crate = { git = "https://github.com/bkchr/proc-macro-crate", tag = "v3.2.0" }
borsh = { git = "https://github.com/near/borsh-rs", tag = "borsh-v1.5.5" }
blake3 = { git = "https://github.com/BLAKE3-team/BLAKE3", tag = "1.5.5" }
