[package]
name = "nova_staking"
version = "0.1.0"
description = "Single-token, time-locked staking program for NOVA token (devnet)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nova_staking"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
